--- a/index.html
+++ b/index.html
@@ -1,12 +1,313 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Products</title>
-</head>
-<body>
-    
-</body>
+    <!-- font awesome -->
+    <!-- <script src="https://kit.fontawesome.com/76943a5621.js" crossorigin="anonymous" ></script> -->
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/76943a5621.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- header section -->
+    <header class="header-container">
+      <div>
+        <h2>Influencer products</h2>
+      </div>
+      <div>
+        <nav class="navbar">
+          <ul>
+            <li>Home</li>
+            <li>Products</li>
+            <li>Sign up</li>
+            <li>Log in</li>
+            <li><i class="fa-solid fa-magnifying-glass"></i></li>
+            <li><i class="fa-solid fa-cart-shopping"></i></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- banner section -->
+    <section>
+      <div class="banner-container">
+        <div class="banner-items">
+          <h1 class="banner-title">
+            Start your Journey as <br />
+            Influencer
+          </h1>
+          <p class="banner-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="banner-btn">
+            Preebook now <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+        <div class="banner-image">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </div>
+      <div class="logo-container">
+        <img src="logos/Alibaba.svg" alt="" />
+        <img src="logos/Amazon.svg" alt="" />
+        <img src="logos/Daraz.pk Logo.svg" alt="" />
+        <img src="logos/Ebay.svg" alt="" />
+        <img src="logos/Rakuten.svg" alt="" />
+        <img src="logos/Target.svg" alt="" />
+        <img src="logos/Walmart.svg" alt="" />
+      </div>
+    </section>
+    <!-- Popular Collection -->
+    <section>
+      <h2 class="popular-collection-title">Popular Collection</h2>
+      <div class="collection">
+        <div class="collection-items">
+          <div>
+            <img src="images/tripod.png" alt="" />
+            <h2>Flex Tripod</h2>
+            <h3>$50.48</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/mic.png" alt="" />
+            <h2>Microphone</h2>
+            <h3>$120.25</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/airpod.png" alt="" />
+            <h2>Earbuds</h2>
+            <h3>$100.00</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/drone.png" alt="" />
+            <h2>Drone</h2>
+            <h3>$980.25</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/lights.png" alt="" />
+            <h2>Light Setup</h2>
+            <h3>$1200.00</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/setup.png" alt="" />
+            <h2>PhotoShoot Set</h2>
+            <h3>$820.40</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/camera.png" alt="" />
+            <h2>Blogging Camera</h2>
+            <h3>$1800.80</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/single-light.png" alt="" />
+            <h2>Green Screen</h2>
+            <h3>$25.48</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <div class="collection-items">
+          <div>
+            <img src="images/action.png" alt="" />
+            <h2>Action Camera</h2>
+            <h3>$380.00</h3>
+          </div>
+          <div class="ratings">
+            <div>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star rating"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p>4.00</p>
+          </div>
+          <p>
+            Wordwide shifting <br />
+            available <br />
+            Buyers protection possible!
+          </p>
+        </div>
+        <button class="collection-btn">
+          See More <i class="fa-solid fa-arrow-right-long"></i>
+        </button>
+      </div>
+    </section>
+    <!-- Featured Section -->
+    <section>
+      <div class="feature-items">
+        <div class="feature-image">
+          <img src="images/gear.png" alt="" />
+        </div>
+        <div class="feature-info">
+          <h1 class="feature-title">Featured products at one place</h1>
+          <p class="feature-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitatio
+            veniam consequat sunt nostrud amet
+          </p>
+          <button class="feature-btn">
+            Join Now <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- footer section -->
+    <footer>
+        <div class="footer">
+            <h3>Influencer products</h3>
+            <p>Copyright © 2020 influencer products <br>
+                All rights reserved</p>
+            <div>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+  </body>
 </html>
