--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- header section -->
     <header class="header-container">
       <div>
-        <h2>Influencer products</h2>
+        <h2>Influencer Products</h2>
       </div>
       <div>
         <nav class="navbar">
@@ -44,7 +44,7 @@
       <div class="banner-container">
         <div class="banner-items">
           <h1 class="banner-title">
-            Start your Journey as <br />
+            Start Your Journey as <br />
             Influencer
           </h1>
           <p class="banner-description">
@@ -52,7 +52,7 @@
             vestibulum sed scelerisque eros. Lectus faucibus.
           </p>
           <button class="banner-btn">
-            Preebook now <i class="fa-solid fa-arrow-right-long"></i>
+            Preebook Now <i class="fa-solid fa-arrow-right-long"></i>
           </button>
         </div>
         <div class="banner-image">
@@ -283,7 +283,7 @@
           <img src="images/gear.png" alt="" />
         </div>
         <div class="feature-info">
-          <h1 class="feature-title">Featured products at one place</h1>
+          <h1 class="feature-title">Featured Products at One Place</h1>
           <p class="feature-description">
             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
             sint. Velit officia consequat duis enim velit mollit. Exercitatio
@@ -298,9 +298,9 @@
     <!-- footer section -->
     <footer>
         <div class="footer">
-            <h3>Influencer products</h3>
-            <p>Copyright © 2020 influencer products <br>
-                All rights reserved</p>
+            <h3>Influencer Products</h3>
+            <p>Copyright © 2020 Influencer Products <br>
+                All Rights Reserved</p>
             <div>
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-twitter"></i>
